  milestone (#49,#53 Michael Grünewald)
* A new jar command, git-list-issues, has been added to print issues for a repo
* A new jar command, git-search, has been added to search GitHub
* Filter.state now includes `All constructor (#59,#62 Michael Grünewald)
* pull_ref type added from which pull now inherits
* issue_pull_request optional field of pull_ref type added
* organization type added
* user and organization now inherit from org
* user_info_updated_at field added
* user_info_html_url field added
* issue_created_at, issue_updated_at, issue_closed_at added (#50,#51
  from Michael Grünewald)
* repository_subscribers_count field added (the new "watchers")
* repository_language field added
* repository_has_pages field added
* comment type added
* issue_comment_html_url field added
* commit_comment type added
* commit_comment_event type added
* ref type added
* create_event type added
* delete_event type added
* fork_event type added
* wiki_page_action type added
* wiki_page type added
* gollum_event added
* issue_comment_action type added
* issue_comment_event type added
* issues_action type added
* issues_event type added
* member_action type added
* member_event type added
* page_build_error type added
* page_build_status type added
* page_build type added
* page_build_event type added
* pull_request_action type added
* pull_reqest_event type added
* pull_request_review_comment_action type added
* pull_request_review_comment type added
* pull_request_review_comment_event type added
* push_event_author type added
* push_event_commit type added
* push_event type added
* release_action type added
* release_event type added
* status_branch_commit type added
* status_branch type added
* status_event type added
* team_add_info type added
* team_add_event type added
* watch_action type added
* watch_event type added
* event_constr type added
* event_payload field added
* events type added
* hook_config type added

* Add Gist manipulation support (#48)